// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductLink when set onClickQr, then QR code will be displayed 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 css-13i4rnv-MuiGrid-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
      href="https://hamchance.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="MuiStack-root css-1xcvc1q-MuiStack-root"
      >
        <div />
        <div>
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-jrj0v0-MuiTypography-root"
          >
            hamchance
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-jrj0v0-MuiTypography-root"
          >
            @ham
          </p>
        </div>
      </div>
    </a>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
  >
    <div>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="QrCode2Icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15 21h-2v-2h2v2zm-2-7h-2v5h2v-5zm8-2h-2v4h2v-4zm-2-2h-2v2h2v-2zM7 12H5v2h2v-2zm-2-2H3v2h2v-2zm7-5h2V3h-2v2zm-7.5-.5v3h3v-3h-3zM9 9H3V3h6v6zm-4.5 7.5v3h3v-3h-3zM9 21H3v-6h6v6zm7.5-16.5v3h3v-3h-3zM21 9h-6V3h6v6zm-2 10v-3h-4v2h2v3h4v-2h-2zm-2-7h-4v2h4v-2zm-4-2H7v2h2v2h2v-2h2v-2zm1-1V7h-2V5h-2v4h4zM6.75 5.25h-1.5v1.5h1.5v-1.5zm0 12h-1.5v1.5h1.5v-1.5zm12-12h-1.5v1.5h1.5v-1.5z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProductLink when set onClickQr, then QR code will be not displayed 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 css-13i4rnv-MuiGrid-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
      href="https://hamchance.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="MuiStack-root css-1xcvc1q-MuiStack-root"
      >
        <div />
        <div>
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-jrj0v0-MuiTypography-root"
          >
            hamchance
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-jrj0v0-MuiTypography-root"
          >
            @ham
          </p>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
